--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,22 @@
 services:
   bitcoin:
-    build: ./bitcoin
+    build:
+      context: ./bitcoin
+      args:
+        - REP=${BTC_REP}
+        - TAG=${BTC_TAG}
     environment:
-      - REP=https://github.com/bitcoin/bitcoin.git
-      - TAG=v22.0
+      - BIN=bitcoind
+      - PORT=${BTC_PORT}
+      - PRUNE=${BTC_PRUNE}
+      - RPC_USER=${BTC_RPC_USER}
+      - RPC_PASS=${BTC_RPC_PASS}
+      - RPC_PORT=${BTC_RPC_PORT}
     ports:
-      - 127.0.0.1:8343:8343
-      - 127.0.0.1:8342:8342
+      - 8343:${BTC_PORT}
+      - 8342:${BTC_RPC_PORT}
     volumes:
-      - ./bitcoin/data:/root
-      - bitcoin:/var/bitcoin
+      - ./bitcoin/wallets:/root/wallets
+      - bitcoin:/var/blockchain
 volumes:
   bitcoin: null
