--- a/default.env
+++ b/default.env
@@ -6,3 +6,11 @@ BTC_PRUNE=5000
 BTC_RPC_USER=user
 BTC_RPC_PASS=password
 BTC_RPC_PORT=8332
+# litecoin
+LTC_REP=https://github.com/litecoin-project/litecoin.git
+LTC_TAG=v0.18.1
+LTC_PORT=9333
+LTC_PRUNE=5000
+LTC_RPC_USER=user
+LTC_RPC_PASS=Ordkj1QpzRW3FtWKYxiBFuccIUHfah
+LTC_RPC_PORT=9332
