--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,6 @@ services:
         - REP=${BTC_REP}
         - TAG=${BTC_TAG}
     environment:
-      - BIN=bitcoind
       - PORT=${BTC_PORT}
       - PRUNE=${BTC_PRUNE}
       - RPC_USER=${BTC_RPC_USER}
@@ -18,5 +17,24 @@ services:
     volumes:
       - ./bitcoin/wallets:/root/wallets
       - bitcoin:/var/blockchain
+  litecoin:
+    build:
+      context: ./litecoin
+      args:
+        - REP=${LTC_REP}
+        - TAG=${LTC_TAG}
+    environment:
+      - PORT=${LTC_PORT}
+      - PRUNE=${LTC_PRUNE}
+      - RPC_USER=${LTC_RPC_USER}
+      - RPC_PASS=${LTC_RPC_PASS}
+      - RPC_PORT=${LTC_RPC_PORT}
+    ports:
+      - 9343:${LTC_PORT}
+      - 9342:${LTC_RPC_PORT}
+    volumes:
+      - ./litecoin/wallets:/root/wallets
+      - litecoin:/var/blockchain
 volumes:
   bitcoin: null
+  litecoin: null
