--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,25 @@
 services:
   bitcoin:
-    build:
-      context: ./bitcoin
-      args:
-        - REP=${BTC_REP}
-        - TAG=${BTC_TAG}
+    build: ./bitcoin
     environment:
-      - PORT=${BTC_PORT}
       - PRUNE=${BTC_PRUNE}
       - RPC_USER=${BTC_RPC_USER}
       - RPC_PASS=${BTC_RPC_PASS}
-      - RPC_PORT=${BTC_RPC_PORT}
     ports:
-      - 8343:${BTC_PORT}
-      - 8342:${BTC_RPC_PORT}
+      - ${BTC_PORT}:8333
+      - ${BTC_RPC_PORT}:8332
     volumes:
       - ./bitcoin/wallets:/root/wallets
       - bitcoin:/var/blockchain
   litecoin:
-    build:
-      context: ./litecoin
-      args:
-        - REP=${LTC_REP}
-        - TAG=${LTC_TAG}
+    build: ./litecoin
     environment:
-      - PORT=${LTC_PORT}
       - PRUNE=${LTC_PRUNE}
       - RPC_USER=${LTC_RPC_USER}
       - RPC_PASS=${LTC_RPC_PASS}
-      - RPC_PORT=${LTC_RPC_PORT}
     ports:
-      - 9343:${LTC_PORT}
-      - 9342:${LTC_RPC_PORT}
+      - ${LTC_PORT}:9333
+      - ${LTC_RPC_PORT}:9332
     volumes:
       - ./litecoin/wallets:/root/wallets
       - litecoin:/var/blockchain
